sumo/tests/sumo/errors/network/junction/root__junction#type__false2/errors.sumo
Error: An unknown or invalid junction type 'xxx' occured in junction '2'.
 Can not build according junction.
Quitting (on error).
